fixed wrapping

--- a/assets/html/prva_godina/assets/css/style.css
+++ b/assets/html/prva_godina/assets/css/style.css
@@ -287,6 +287,12 @@ article.active {
   z-index: -1;
 }
 
+.text-wrap{
+  text-overflow: ellipsis; 
+  overflow: hidden; 
+  white-space: nowrap;
+}
+
 
 
 
